edit in cards sass

--- a/pages/category.html
+++ b/pages/category.html
@@ -18,74 +18,74 @@
 
         <!-- Categories cards -->
         <h4 class="head-title">Furniture</h4>
-        <div class="row mx-auto g-3 overflow-scroll">
-            <a class="card category col-4 col-lg-2" href="#">
+        <div class="row mx-auto g-3">
+            <a class="card category-card col-4 col-lg-2" href="#">
                 <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
                 <div class="card-body category-body">
                     <p class="card-text">Furniture sets</p>
                 </div>
             </a>
-            <a class="card category col-4 col-lg-2" href="#">
+            <a class="card category-card col-4 col-lg-2" href="#">
                 <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
                 <div class="card-body category-body">
                     <p class="card-text">Furniture sets</p>
                 </div>
             </a>
-            <a class="card category col-4 col-lg-2" href="#">
+            <a class="card category-card col-4 col-lg-2" href="#">
                 <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
                 <div class="card-body category-body">
                     <p class="card-text">Furniture sets</p>
                 </div>
             </a>
-            <a class="card category col-4 col-lg-2" href="#">
+            <a class="card category-card col-4 col-lg-2" href="#">
                 <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
                 <div class="card-body category-body">
                     <p class="card-text">Furniture sets</p>
                 </div>
             </a>
-            <a class="card category col-4 col-lg-2" href="#">
+            <a class="card category-card col-4 col-lg-2" href="#">
                 <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
                 <div class="card-body category-body">
                     <p class="card-text">Furniture sets</p>
                 </div>
             </a>
-            <a class="card category col-4 col-lg-2" href="#">
+            <a class="card category-card col-4 col-lg-2" href="#">
                 <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
                 <div class="card-body category-body">
                     <p class="card-text">Furniture sets</p>
                 </div>
             </a>
-            <a class="card category col-4 col-lg-2" href="#">
+            <a class="card category-card col-4 col-lg-2" href="#">
                 <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
                 <div class="card-body category-body">
                     <p class="card-text">Furniture sets</p>
                 </div>
             </a>
-            <a class="card category col-4 col-lg-2" href="#">
+            <a class="card category-card col-4 col-lg-2" href="#">
                 <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
                 <div class="card-body category-body">
                     <p class="card-text">Furniture sets</p>
                 </div>
             </a>
-            <a class="card category col-4 col-lg-2" href="#">
+            <a class="card category-card col-4 col-lg-2" href="#">
                 <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
                 <div class="card-body category-body">
                     <p class="card-text">Furniture sets</p>
                 </div>
             </a>
-            <a class="card category col-4 col-lg-2" href="#">
+            <a class="card category-card col-4 col-lg-2" href="#">
                 <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
                 <div class="card-body category-body">
                     <p class="card-text">Furniture sets</p>
                 </div>
             </a>
-            <a class="card category col-4 col-lg-2" href="#">
+            <a class="card category-card col-4 col-lg-2" href="#">
                 <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
                 <div class="card-body category-body">
                     <p class="card-text">Furniture sets</p>
                 </div>
             </a>
-            <a class="card category col-4 col-lg-2" href="#">
+            <a class="card category-card col-4 col-lg-2" href="#">
                 <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
                 <div class="card-body category-body">
                     <p class="card-text">Furniture sets</p>
@@ -97,7 +97,7 @@
         <h4 class="head-title">Fun desks to keep your creativity flowing</h4>
         <div class="mx-auto">
             <!-- <div class=""> -->
-            <a class="card category row-card" href="#">
+            <a class="card category-card row-card" href="#">
                 <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
                 <div class="card-body card-right">
                     <p class="card-text head-title">Furniture sets</p>
@@ -107,6 +107,7 @@
 
         <h4 class="head-title">Stylish and smart wardrobes to fit your space</h4>
         <p class="small-text">High quality wardrobes are full of choices so you can get the look you want on the outside and the interior organisers you want on the inside.</p>
+        
     </div>
 </body>
 
