--- a/pages/category.html
+++ b/pages/category.html
@@ -17,6 +17,7 @@
     <div class="container">
 
         <!-- Categories cards -->
+        <div>
         <h4 class="head-title">Furniture</h4>
         <div class="row mx-auto g-3">
             <a class="card category-card col-4 col-lg-2" href="#">
@@ -92,22 +93,64 @@
                 </div>
             </a>
         </div>
-
-        <!-- Cards with text right -->
-        <h4 class="head-title">Fun desks to keep your creativity flowing</h4>
-        <div class="mx-auto">
-            <!-- <div class=""> -->
-            <a class="card category-card row-card" href="#">
-                <img src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
-                <div class="card-body card-right">
-                    <p class="card-text head-title">Furniture sets</p>
-                </div>
-            </a>
         </div>
 
-        <h4 class="head-title">Stylish and smart wardrobes to fit your space</h4>
-        <p class="small-text">High quality wardrobes are full of choices so you can get the look you want on the outside and the interior organisers you want on the inside.</p>
+        <!-- Cards with text right -->
+        <div>
+            <h4 class="head-title">Fun desks to keep your creativity flowing</h4>
+            <div class="row-card-holder">
+                <a class="row card category-card row-card g-0" href="#">
+                    <img class="col-12 col-sm-6 col-md-8" src="../images/bedroom-furniture-sets-54992.webp" class="card-img-top" alt="...">
+                    <div class="col-12 col-sm-6 col-md-4 card-body card-right">
+                        <p class="card-text head-title">Furniture sets</p>
+                        <button class="card-btn"><i class="bi bi-arrow-right"></i></button>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Gallery div -->
+        <div>
+            <h4 class="head-title">Stylish and smart wardrobes to fit your space</h4>
+            <p class="small-text">High quality wardrobes are full of choices so you can get the look you want on the outside and the interior organisers you want on the inside.</p>  
+            <div>
+                <!-- <img src="https://www.ikea.com/ext/ingkadam/m/2c5ef270297e6af5/original/PH177014-crop001.jpg?f=l"/> -->
+            </div>  
+        </div>    
         
+        <!-- Steps cards -->
+        <div class="row g-1">
+            <div class="card step-card col-md-6 col-lg-3">
+                <div class="card-body step-body">
+                    <svg focusable="false" class="pub__svg-icon pub__call-out__icon" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M14 6H5v3h9V6zM3 4v7h3.983l-2.3093 4H3v6h11v-6h-3.5445l2.3094-4H16V9h2V8h3V6h-3V5h-2V4H3zm7.4555 7-2.3094 4H6.983l2.3094-4h1.163zM5 17h7v2H5v-2z"></path></svg>
+                    <h5 class="step-title">Assembly</h5>
+                    <p >A professional service – at home or at work</p>
+                    <a class="step-link" href="#">Learn more</a>
+                </div>
+            </div>
+            <div class="card step-card col-md-6 col-lg-3">
+                <div class="card-body step-body">
+                    <svg focusable="false" class="pub__svg-icon pub__call-out__icon" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M21 4H1v16h15V10H6v8H3V6h16v7.1707c-1.1652.4118-2 1.5231-2 2.8293v3c0 1.6569 1.3431 3 3 3s3-1.3431 3-3v-3c0-1.3062-.8348-2.4175-2-2.8293V4zM8 18h2v-6H8v6zm6 0h-2v-6h2v6zm5-2c0-.5523.4477-1 1-1s1 .4477 1 1v3c0 .5523-.4477 1-1 1s-1-.4477-1-1v-3z"></path></svg>
+                    <h5 class="step-title">Click and collect</h5>
+                    <p >Orders that you pick up yourself</p>
+                    <a class="step-link" href="#">Learn more</a>
+                </div>
+            </div>
+            <div class="card step-card col-md-6 col-lg-3">
+                <div class="card-body step-body">
+                    <svg focusable="false" class="pub__svg-icon pub__call-out__icon" aria-hidden="true"><path d="m9 4 3 3V5.0054c3.866 0 7 3.134 7 7 0 .9088-.1732 1.7773-.4884 2.574l1.5104 1.5104c.6253-1.2258.978-2.6139.978-4.0844 0-4.9706-4.0294-9-9-9V1L9 4zM7.0191 7.087C5.7707 8.3512 5 10.0883 5 12.0054c0 .9089.1732 1.7773.4885 2.5741L3.978 16.0898C3.3527 14.864 3 13.4759 3 12.0054c0-2.4694.9945-4.7065 2.6049-6.3327L7.019 7.087z"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M7 10v12h2v-2h6v2h2V10H7zm8 6v2H9v-2h6zm-6-2v-2h6v2H9z"></path></svg>                    
+                    <h5 class="step-title">Buy back and resell</h5>
+                    <p >Money for your used IKEA products</p>
+                </div>
+            </div>
+            <div class="card step-card col-md-6 col-lg-3">
+                <div class="card-body step-body">
+                    <svg focusable="false" class="pub__svg-icon pub__call-out__icon" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M5 5C3.3432 5 2 6.3431 2 8v8c0 1.6569 1.3432 3 3 3h14c1.6569 0 3-1.3431 3-3V8c0-1.6569-1.3431-3-3-3H5zM4 8c0-.5523.4477-1 1-1h14c.5523 0 1 .4477 1 1v1H4V8zm0 4v4c0 .5523.4477 1 1 1h14c.5523 0 1-.4477 1-1v-4H4z"></path></svg>                    
+                    <h5 class="step-title">Payment options</h5>
+                    <p >How to pay, in store and online</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
