--- a/Log-in.html
+++ b/Log-in.html
@@ -12,11 +12,45 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-
-    <link rel="stylesheet" href="assets/main.css" />
-    <title>Document</title>
+    <!-- link code for icon link in top of page -->
+    <link rel="shortcut icon" href="./assets/images/ikea-logo.png" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <title>LogIn</title>
   </head>
   <body>
+    
+    <!-- Start login Page -->
+    <div class="log-parent">
+      <div class="container">
+        <!-- Left section -->
+        <section class="row left-box-log">
+          <section class="col-md-5 col-12 login-heading">
+            <h3>Login to your IKEA account</h3>
+            <p>Login or create an account to access your latest shopping lists within our website and IKEA Shopping app.</p>
+            <button class="login-creation">Create account</button>
+          </section>
+
+          <!-- Center Section -->
+          <section class="col-md-2 col-12 center-sec"></section>
+          <!-- Right Section -->
+          <section class="col-md-5 col-12 login-form">
+            <div class="form-floating mb-3 input-log">
+              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <label for="floatingInput">Email (UserName)</label>
+            </div>
+            <div class="form-floating input-log">
+              <input type="password" class="form-control sec-inp" id="floatingPassword" placeholder="Password">
+              <label for="floatingPassword">Password</label>
+              <a href="#">Forget your Password?</a>
+            </div>
+            <button class="login-creation">Login</button>
+          </section>
+        </section>
+      </div>
+    </div>
+    <!-- End Login Page -->
+
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
