--- a/pages/products.html
+++ b/pages/products.html
@@ -18,9 +18,48 @@
   </head>
   <body>
     <!-- Bootstrap JS -->
-    <div>
-        
+    <div class="breadcrumb-container">
+        <nav style="--bs-breadcrumb-divider: '>';"  aria-label="breadcrumb">
+            <ol class="breadcrumb breadcrumb-list">
+              <li class="breadcrumb-item"><a class='bc-breadcrumb__link' href="#">products</a></li>
+              <li class="breadcrumb-item" aria-current="page"><a class='bc-breadcrumb__link' href="#">beds</a></li>
+            </ol>
+        </nav>
     </div>
+
+    <div style="margin: 1.875rem 0;">
+      <h1>Children beds</h1>
+    </div>
+
+    <section class='col-12 col-md-7 col-lg-7'>
+      <p>     
+         We understand that growing kids have lots of needs. Like a quiet spot to relax or a place to do their homework. That's why loft beds for kids are a super-smart multi-tasking solution, helping you free up space for a desk, sofa, wardrobe or pillow fort. Bring home a children's loft bed today!
+      </p>
+    </section>
+
+    <div class="row sticky-top ">
+      <div class="col-12 col-md-7 col-lg-7 "> 
+        <button type="button" class="btn btn-light filter-btn">compare</button>
+        <button type="button" class="btn btn-light filter-btn">sort</button>
+        <button type="button" class="btn btn-light filter-btn">color</button>
+        <button type="button" class="btn btn-light filter-btn">price</button>
+        <button type="button" class="btn btn-light filter-btn">special price</button>
+        <button type="button" class="btn btn-light filter-btn">All filters</button>
+      </div>
+
+      <div class="col-5  "> 
+        <div class="float-lg-end float-md-end"> 
+          <p class="d-inline-flex">2 items</p>
+          <div class="btn-group me-2" role="group" aria-label="First group">
+            <button type="button" class="btn btn-outline-secondary">Product</button>
+            <button type="button" class="btn btn-outline-secondary">Room</button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div style="height: 1000px;"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
