Add images cards

--- a/pages/category.html
+++ b/pages/category.html
@@ -23,11 +23,11 @@
     <div class="container">
       <!-- Categories cards -->
       <div>
-        <h4 class="head-title">Furniture</h4>
         <div class="row mx-auto g-3">
+            <h4 class="head-title">Furniture</h4>
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
-              src="../assets/images/bedroom-furniture-sets-54992.webp"
+              src="https://www.ikea.com/global/assets/navigation/images/gaming-furniture-55002.jpeg?imwidth=300"
               class="card-img-top"
               alt="..."
             />
@@ -37,7 +37,7 @@
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
-              src="../assets/images/bedroom-furniture-sets-54992.webp"
+              src="https://www.ikea.com/global/assets/navigation/images/furniture-sets-55036.jpeg?imwidth=300"
               class="card-img-top"
               alt="..."
             />
@@ -47,7 +47,7 @@
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
-              src="../assets/images/bedroom-furniture-sets-54992.webp"
+              src="https://www.ikea.com/global/assets/navigation/images/beds-bm003.jpeg?imwidth=300"
               class="card-img-top"
               alt="..."
             />
@@ -57,7 +57,7 @@
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
-              src="../assets/images/bedroom-furniture-sets-54992.webp"
+              src="https://www.ikea.com/global/assets/navigation/images/sofas-fu003.jpeg?imwidth=300"
               class="card-img-top"
               alt="..."
             />
@@ -67,7 +67,7 @@
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
-              src="../assets/images/bedroom-furniture-sets-54992.webp"
+              src="https://www.ikea.com/global/assets/navigation/images/bookcases-shelving-units-st002.jpeg?imwidth=300"
               class="card-img-top"
               alt="..."
             />
@@ -77,7 +77,7 @@
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
-              src="../assets/images/bedroom-furniture-sets-54992.webp"
+              src="https://www.ikea.com/global/assets/navigation/images/tables-desks-fu004.jpeg?imwidth=300"
               class="card-img-top"
               alt="..."
             />
@@ -87,7 +87,7 @@
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
-              src="../assets/images/bedroom-furniture-sets-54992.webp"
+              src="https://www.ikea.com/global/assets/navigation/images/cabinets-cupboards-st003.jpeg?imwidth=300"
               class="card-img-top"
               alt="..."
             />
@@ -97,7 +97,7 @@
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
-              src="../assets/images/bedroom-furniture-sets-54992.webp"
+              src="https://www.ikea.com/global/assets/navigation/images/tv-media-furniture-10475.jpeg?imwidth=300"
               class="card-img-top"
               alt="..."
             />
@@ -107,7 +107,7 @@
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
-              src="../assets/images/bedroom-furniture-sets-54992.webp"
+              src="https://www.ikea.com/global/assets/navigation/images/chests-of-drawers-drawer-units-st004.jpeg?imwidth=300"
               class="card-img-top"
               alt="..."
             />
@@ -117,7 +117,7 @@
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
-              src="../assets/images/bedroom-furniture-sets-54992.webp"
+              src="https://www.ikea.com/global/assets/navigation/images/wardrobes-19053.jpeg?imwidth=300"
               class="card-img-top"
               alt="..."
             />
@@ -127,7 +127,7 @@
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
-              src="../assets/images/bedroom-furniture-sets-54992.webp"
+              src="https://www.ikea.com/global/assets/navigation/images/chairs-fu002.jpeg?imwidth=300"
               class="card-img-top"
               alt="..."
             />
@@ -137,7 +137,87 @@
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
-              src="../assets/images/bedroom-furniture-sets-54992.webp"
+              src="https://www.ikea.com/global/assets/navigation/images/outdoor-furniture-od003.jpeg?imwidth=300"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body category-body">
+              <p class="card-text">Furniture sets</p>
+            </div>
+          </a>
+          <a class="card category-card col-4 col-lg-2" href="#">
+            <img
+              src="https://www.ikea.com/global/assets/navigation/images/sideboards-buffets-console-tables-30454.jpeg?imwidth=300"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body category-body">
+              <p class="card-text">Furniture sets</p>
+            </div>
+          </a>
+          <a class="card category-card col-4 col-lg-2" href="#">
+            <img
+              src="https://www.ikea.com/global/assets/navigation/images/childrens-furniture-18767.jpeg?imwidth=300"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body category-body">
+              <p class="card-text">Furniture sets</p>
+            </div>
+          </a>
+          <a class="card category-card col-4 col-lg-2" href="#">
+            <img
+              src="https://www.ikea.com/global/assets/navigation/images/room-dividers-46080.jpeg?imwidth=300"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body category-body">
+              <p class="card-text">Furniture sets</p>
+            </div>
+          </a>
+          <a class="card category-card col-4 col-lg-2" href="#">
+            <img
+              src="https://www.ikea.com/global/assets/navigation/images/trolleys-fu005.jpeg?imwidth=300"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body category-body">
+              <p class="card-text">Furniture sets</p>
+            </div>
+          </a>
+          <a class="card category-card col-4 col-lg-2" href="#">
+            <img
+              src="https://www.ikea.com/global/assets/navigation/images/bar-furniture-16244.jpeg?imwidth=300"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body category-body">
+              <p class="card-text">Furniture sets</p>
+            </div>
+          </a>
+          <a class="card category-card col-4 col-lg-2" href="#">
+            <img
+              src="https://www.ikea.com/global/assets/navigation/images/armchairs-chaise-longues-fu006.jpeg?imwidth=300"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body category-body">
+              <p class="card-text">Furniture sets</p>
+            </div>
+          </a>
+          <a class="card category-card col-4 col-lg-2" href="#">
+            <img
+              src="https://www.ikea.com/global/assets/navigation/images/cafe-furniture-19141.jpeg?imwidth=300"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body category-body">
+              <p class="card-text">Furniture sets</p>
+            </div>
+          </a>
+          <a class="card category-card col-4 col-lg-2" href="#">
+            <img
+              src="https://www.ikea.com/global/assets/navigation/images/nursery-furniture-45780.jpeg?imwidth=300"
               class="card-img-top"
               alt="..."
             />
@@ -150,17 +230,17 @@
 
       <!-- Cards with text right -->
       <div>
-        <h4 class="head-title">Fun desks to keep your creativity flowing</h4>
         <div class="row-card-holder">
-          <a class="row card category-card row-card g-0" href="#">
+        <h4 class="head-title">Fun desks to keep your creativity flowing</h4>
+          <a class="row card row-card g-0" href="#">
             <img
               class="col-12 col-sm-6 col-md-8"
-              src="../assets/images/bedroom-furniture-sets-54992.webp"
+              src="https://www.ikea.com/images/a-white-green-pahl-desk-a-white-micke-desk-and-a-grey-turquo-b4502b450450609155755731b37c1ffb.jpg?f=xl"
               class="card-img-top"
               alt="..."
             />
             <div class="col-12 col-sm-6 col-md-4 card-body card-right">
-              <p class="card-text head-title">Furniture sets</p>
+              <h4 class="card-text head-title">Meet your new study buddies</h4>
               <button class="card-btn">
                 <i class="bi bi-arrow-right"></i>
               </button>
@@ -171,21 +251,34 @@
 
       <!-- Gallery div -->
       <div>
-        <h4 class="head-title">
-          Stylish and smart wardrobes to fit your space
-        </h4>
-        <p class="small-text">
-          High quality wardrobes are full of choices so you can get the look you
-          want on the outside and the interior organisers you want on the
-          inside.
-        </p>
-        <div>
-          <!-- <img src="https://www.ikea.com/ext/ingkadam/m/2c5ef270297e6af5/original/PH177014-crop001.jpg?f=l"/> -->
-        </div>
+        <div class="image-gallery row g-4">
+            <h4 class="head-title">
+                Stylish and smart wardrobes to fit your space
+              </h4>
+              <div class="d-flex flex-row justify-content-between">
+                  <p class="small-text">
+                      High quality wardrobes are full of choices so you can get the look you
+                      want on the outside and the interior organisers you want on the
+                      inside.
+                  </p>
+                  <button class="see-all-btn">See all wardrobes</button>
+              </div>
+            <div class="col-12 col-lg-6">
+                <img src="https://www.ikea.com/ext/ingkadam/m/2c5ef270297e6af5/original/PH177014-crop001.jpg?f=xl"/>
+            </div>
+            <div class="image-column col-6 col-lg-3">
+                <img class="short-img" src="https://www.ikea.com/ext/ingkadam/m/13eb5edd6b5d68a3/original/PH162765-crop001.jpg?f=xs"/>
+                <img class="long-img" src="https://www.ikea.com/ext/ingkadam/m/6624b8c6d7b521e4/original/PH176180-crop001.jpg?f=xs"/>
+            </div>
+            <div class="image-column col-6 col-lg-3">
+                <img class="long-img" src="https://www.ikea.com/ext/ingkadam/m/50d75c8a15d5f07b/original/PH176410-crop001.jpg?f=xs"/>
+                <img class="short-img" src="https://www.ikea.com/ext/ingkadam/m/32ec189635e109fb/original/PH162647.jpg?f=xs"/>
+            </div>
+        </div>   
       </div>
 
       <!-- Steps cards -->
-      <div class="row g-1">
+      <div class="row g-1 my-4">
         <div class="card step-card col-md-6 col-lg-3">
           <div class="card-body step-body">
             <svg
