Add image gallery in SCSS files as a layout section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,42 @@
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
+
+      <!-- Gallery div -->
+      <div class="border-top">
+        <div class="image-gallery row">
+          <div class="col-12 col-lg-6">
+            <img
+              src="https://www.ikea.com/images/49/b4/49b4ae9edac2dacb67929ff5ececd994.jpg?f=xl"
+              alt="sale"
+            />
+          </div>
+          <div class="image-column col-6 col-lg-3">
+            <img
+              class="short-img"
+              src="https://www.ikea.com/ext/ingkadam/m/6fe00db2519c240f/original/PH180057.jpg?f=xs"
+              alt="dinner table"
+            />
+            <img
+              class="long-img"
+              src="https://www.ikea.com/ext/ingkadam/m/1a58fe57019783c0/original/PH171011.jpg?f=xs"
+              alt
+            />
+          </div>
+          <div class="image-column col-6 col-lg-3">
+            <img
+              class="long-img"
+              src="https://www.ikea.com/images/65/38/65383e77617de45341e1e27b2c38ad67.jpg?f=xs"
+              alt
+            />
+            <img
+              class="short-img"
+              src="https://www.ikea.com/images/45/d9/45d9cfbab2bad50883e69eaf6e9e7bfa.jpg?f=xs"
+              alt
+            />
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Bootstrap JS -->
